--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -20,6 +20,7 @@ section {
       @include breakpoint($tablet) {
         @include flex(3);
         display: inline-block;
+        padding-right: 1em;
       }
     }
   }
@@ -34,6 +35,7 @@ section {
 	h4 {
 		color: $secondary;
 		font-family: $font-sans;
+		text-transform: uppercase;
 	}
 	li {
 		margin: 1em;
