updates to notes.html, added work.html

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -12,4 +12,5 @@
 @import 'partials/_global.scss';
 @import 'partials/_header.scss';
 @import 'partials/_main.scss';
+@import 'partials/_notes.scss';
 @import 'partials/_footer.scss';
