Grunt, Notes css, and file updates
updated the grunt file so it wouldn't run criticalcss on the watch task anymore. Also modified the Notes CSS a bit to give larger margins to the left and right for better readability (will have to test with real fonts. Added HTML files for the other proposed notes as well as changed a bit of markup to be more semantic

--- a/sass/partials/_notes.scss
+++ b/sass/partials/_notes.scss
@@ -1,3 +1,16 @@
+.reading-wrapper {
+  width: 50%;
+}
+
+.notes {
+	margin-top: 2em;
+	a {
+		border-bottom: 1px solid;
+		margin-bottom: .5em;
+		display: inline-block;
+	}
+}
+
 .note {
 	margin-bottom: 2em;
 	&:last-child {
