Flexbox and Google
published the flexbox and google notes

--- a/sass/partials/_global.scss
+++ b/sass/partials/_global.scss
@@ -56,6 +56,11 @@ code {
   border-radius: 3px;
   display: inline-block;
   margin-bottom: 2em;
+  white-space: pre;
+}
+
+strong {
+  font-weight: 700;
 }
 
 /***************End Global******************/
