text alignment, nav color, primary color, code overflow
changed text alignment from center to left on smaller screens...changed the color of the nav elements in the top nav so for accessibility and readability reasons...changed primary color to different shade of blue...altered the code styling so that it would display scroll on overflow

--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -12,17 +12,18 @@
     align-items: center;
   }
   a {
-    color: $primary-dark;
+    color: #fff;
     display: inline-block;
-    padding: 1em;
+    padding: 1em 1em .5em 1em;
     transition: .25s;
     &:hover {
-    	color: #fff;
+    	color: #eee;
     }
   }
   .selected {
     color: #fff;
     cursor: default;
+    border-bottom: 2px solid #fff;
   }
   ul {
     @include flexbox();
