--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -29,7 +29,7 @@
 }
 
 //colors
-$primary: #03c5ee;
+$primary: #0c88d7;
 $primary-dark: darken($primary, 15%);
 $secondary: rgb(55, 209, 188);
 $gray: #737373;
