--- a/sass/partials/_global.scss
+++ b/sass/partials/_global.scss
@@ -45,6 +45,7 @@ h2 {
   margin-bottom: .5em;
   font-size: 1.5em;
   text-align: center;
+  text-shadow: 0 1px 1px rgba(0,0,0,.25);
   @include breakpoint($tablet) {
     text-align: left;
   }
