--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -6,6 +6,7 @@
 	color: #fff;
 	text-align: center;
 	box-shadow: 0 -3px 10px rgba(0,0,0,.2) inset;
+	text-shadow: 0 2px 1px rgba(0,0,0,.25);
   @include breakpoint($tablet) {
     @include flexbox;
     text-align: left;
@@ -16,6 +17,7 @@
     display: inline-block;
     padding: 1em 1em .5em 1em;
     transition: .25s;
+    max-width: 100%;
     &:hover {
     	color: #eee;
     }
@@ -29,14 +31,14 @@
     @include flexbox();
     width: 100%;
     li {
-      display: inline;
       @include flex(1);
+      margin-bottom: 1em;
     }
   }
 }
 .name {
   @include breakpoint($tablet) {
-    @include flex(2);
+    @include flex(1);
     margin-left: 4em;
   }
 }
