--- a/min/css/critical.css
+++ b/min/css/critical.css
@@ -2,12 +2,12 @@ html, body, div, span, h1, a, ul, li{ margin-top: 0px; margin-right: 0px; margin
 body{ line-height: 1; }
  ul{ list-style-type: none; list-style-position: initial; list-style-image: initial; }
 *{ box-sizing: border-box; }
-body{ font-family: museo, serif; font-weight: 300; color: rgb(115, 115, 115); line-height: 1.3; }
-a:link{ color: rgb(3, 197, 238); text-decoration: none; -webkit-transition-property: all; -webkit-transition-duration: 0.2s; -webkit-transition-timing-function: initial; -webkit-transition-delay: initial; }
+body{ font-family: museo, serif; font-weight: 300; color: rgb(115, 115, 115); line-height: 1.3; -webkit-font-smoothing: antialiased; text-rendering: optimizelegibility; }
+a:link{ color: rgb(12, 136, 215); text-decoration: none; -webkit-transition-property: all; -webkit-transition-duration: 0.2s; -webkit-transition-timing-function: initial; -webkit-transition-delay: initial; }
 h1{ font-size: 1.5em; line-height: 3; font-family: p22-underground, sans-serif; vertical-align: top; text-align: center; display: inline; }
 @media (min-width: 730px){
 h1{ text-align: left; }
 }
 @media (min-width: 730px){
-.name{ -webkit-box-flex: 2; margin-left: 4em; }
+.name{ -webkit-box-flex: 1; margin-left: 4em; }
 }
