--- a/min/css/styles.css
+++ b/min/css/styles.css
@@ -77,9 +77,13 @@ body {
   color: #737373;
   line-height: 1.3;
   -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  -moz-font-feature-settings: "liga" on;
 }
 
-/* line 22, ../../sass/partials/_global.scss */
+/* line 26, ../../sass/partials/_global.scss */
 a:link, a:visited, a:active {
   color: #0c88d7;
   text-decoration: none;
@@ -88,12 +92,12 @@ a:link, a:visited, a:active {
   transition: all .2s;
 }
 
-/* line 28, ../../sass/partials/_global.scss */
+/* line 32, ../../sass/partials/_global.scss */
 a:hover {
   color: #085a8f;
 }
 
-/* line 31, ../../sass/partials/_global.scss */
+/* line 35, ../../sass/partials/_global.scss */
 h1 {
   font-size: 1.5em;
   line-height: 3;
@@ -103,13 +107,13 @@ h1 {
   display: inline;
 }
 @media (min-width: 730px) {
-  /* line 31, ../../sass/partials/_global.scss */
+  /* line 35, ../../sass/partials/_global.scss */
   h1 {
     text-align: left;
   }
 }
 
-/* line 42, ../../sass/partials/_global.scss */
+/* line 46, ../../sass/partials/_global.scss */
 h2 {
   color: #0c88d7;
   font-family: "p22-underground", sans-serif;
@@ -119,13 +123,13 @@ h2 {
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
 }
 @media (min-width: 730px) {
-  /* line 42, ../../sass/partials/_global.scss */
+  /* line 46, ../../sass/partials/_global.scss */
   h2 {
     text-align: left;
   }
 }
 
-/* line 53, ../../sass/partials/_global.scss */
+/* line 57, ../../sass/partials/_global.scss */
 code {
   font-family: monospace;
   background: #ddd;
@@ -138,7 +142,7 @@ code {
   overflow: auto;
 }
 
-/* line 65, ../../sass/partials/_global.scss */
+/* line 69, ../../sass/partials/_global.scss */
 strong {
   font-weight: 700;
 }
