--- a/sass/partials/_global.scss
+++ b/sass/partials/_global.scss
@@ -18,6 +18,10 @@ body  {
   color: $gray;
   line-height: 1.3;
   -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  -moz-font-feature-settings: "liga" on;
 }
 a:link, a:visited, a:active {
   color: $primary;
