--- a/min/css/styles.css
+++ b/min/css/styles.css
@@ -1,481 +1,2 @@
-/***************Reset******************/
-/* line 3, ../../sass/partials/_reset.scss */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-/* line 24, ../../sass/partials/_reset.scss */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-/* line 28, ../../sass/partials/_reset.scss */
-body {
-  line-height: 1;
-}
-
-/* line 31, ../../sass/partials/_reset.scss */
-ol, ul {
-  list-style: none;
-}
-
-/* line 34, ../../sass/partials/_reset.scss */
-blockquote, q {
-  quotes: none;
-}
-
-/* line 37, ../../sass/partials/_reset.scss */
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-
-/* line 42, ../../sass/partials/_reset.scss */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/****************End Reset**************/
-/***************Global******************/
-@font-face {
-  font-family: 'icomoon';
-  src: url("fonts/icomoon.eot?-ahaht");
-  src: url("fonts/icomoon.eot?#iefix-ahaht") format("embedded-opentype"), url("fonts/icomoon.woff?-ahaht") format("woff"), url("fonts/icomoon.ttf?-ahaht") format("truetype"), url("fonts/icomoon.svg?-ahaht#icomoon") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-/* line 13, ../../sass/partials/_global.scss */
-* {
-  box-sizing: border-box;
-}
-
-/* line 16, ../../sass/partials/_global.scss */
-body {
-  font-family: "museo", serif;
-  font-weight: 300;
-  color: #737373;
-  line-height: 1.3;
-  -webkit-text-size-adjust: 100%;
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-  -moz-osx-font-smoothing: grayscale;
-  -moz-font-feature-settings: "liga" on;
-}
-
-/* line 26, ../../sass/partials/_global.scss */
-a:link, a:visited, a:active {
-  color: #0c88d7;
-  text-decoration: none;
-  -webkit-transition: all .2s;
-  /* For Safari 3.1 to 6.0 */
-  transition: all .2s;
-}
-
-/* line 32, ../../sass/partials/_global.scss */
-a:hover {
-  color: #085a8f;
-}
-
-/* line 35, ../../sass/partials/_global.scss */
-h1 {
-  font-size: 1.5em;
-  line-height: 3;
-  font-family: "p22-underground", sans-serif;
-  vertical-align: top;
-  text-align: center;
-  display: inline;
-}
-@media (min-width: 730px) {
-  /* line 35, ../../sass/partials/_global.scss */
-  h1 {
-    text-align: left;
-  }
-}
-
-/* line 46, ../../sass/partials/_global.scss */
-h2 {
-  color: #0c88d7;
-  font-family: "p22-underground", sans-serif;
-  margin-bottom: .5em;
-  font-size: 1.5em;
-  text-align: center;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-}
-@media (min-width: 730px) {
-  /* line 46, ../../sass/partials/_global.scss */
-  h2 {
-    text-align: left;
-  }
-}
-
-/* line 57, ../../sass/partials/_global.scss */
-code {
-  font-family: monospace;
-  background: #ddd;
-  padding: 2em;
-  border-radius: 3px;
-  display: inline-block;
-  margin-bottom: 2em;
-  white-space: pre;
-  max-width: 100%;
-  overflow: auto;
-}
-
-/* line 69, ../../sass/partials/_global.scss */
-strong {
-  font-weight: 700;
-}
-
-/***************End Global******************/
-/***************Header******************/
-/* line 3, ../../sass/partials/_header.scss */
-.top {
-  width: 100%;
-  background: #0c88d7;
-  color: #fff;
-  text-align: center;
-  box-shadow: 0 -3px 10px rgba(0, 0, 0, 0.2) inset;
-  text-shadow: 0 2px 1px rgba(0, 0, 0, 0.25);
-}
-@media (min-width: 730px) {
-  /* line 3, ../../sass/partials/_header.scss */
-  .top {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    text-align: left;
-    align-items: center;
-  }
-}
-/* line 15, ../../sass/partials/_header.scss */
-.top a {
-  color: #fff;
-  display: inline-block;
-  padding: 1em 1em .5em 1em;
-  transition: .25s;
-  max-width: 100%;
-}
-/* line 21, ../../sass/partials/_header.scss */
-.top a:hover {
-  color: #eee;
-}
-/* line 25, ../../sass/partials/_header.scss */
-.top .selected {
-  color: #fff;
-  cursor: default;
-  border-bottom: 2px solid #fff;
-}
-/* line 30, ../../sass/partials/_header.scss */
-.top ul {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  width: 100%;
-}
-/* line 33, ../../sass/partials/_header.scss */
-.top ul li {
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  margin-bottom: 1em;
-}
-
-@media (min-width: 730px) {
-  /* line 39, ../../sass/partials/_header.scss */
-  .name {
-    -webkit-box-flex: 1;
-    -moz-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    margin-left: 4em;
-  }
-}
-
-/* line 45, ../../sass/partials/_header.scss */
-header img {
-  border-radius: 50%;
-  max-width: 50px;
-  margin: 10px;
-}
-
-@media (min-width: 730px) {
-  /* line 50, ../../sass/partials/_header.scss */
-  nav {
-    -webkit-box-flex: 1;
-    -moz-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-  }
-}
-
-/* line 55, ../../sass/partials/_header.scss */
-.links {
-  margin: 1em;
-}
-/* line 57, ../../sass/partials/_header.scss */
-.links ul {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  width: 100%;
-}
-/* line 60, ../../sass/partials/_header.scss */
-.links ul li {
-  display: inline;
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  text-align: center;
-  border: 1px solid #0c88d7;
-  border-right: none;
-}
-@media (min-width: 730px) {
-  /* line 60, ../../sass/partials/_header.scss */
-  .links ul li {
-    width: 25%;
-  }
-}
-/* line 69, ../../sass/partials/_header.scss */
-.links ul li a {
-  text-decoration: none;
-  color: #085a8f;
-  padding: .25em;
-  display: inline-block;
-  width: 100%;
-  -webkit-transition: all .2s;
-  /* For Safari 3.1 to 6.0 */
-  transition: all .2s;
-  font-family: "p22-underground", sans-serif;
-  font-size: .9em;
-}
-/* line 80, ../../sass/partials/_header.scss */
-.links ul li a:hover {
-  color: #fff;
-  background: #37d1bc;
-}
-/* line 85, ../../sass/partials/_header.scss */
-.links ul li:first-child {
-  border-radius: 2px 0 0 2px;
-}
-/* line 88, ../../sass/partials/_header.scss */
-.links ul li:last-child {
-  border-radius: 0 2px 2px 0;
-  border-right: 1px solid #0c88d7;
-}
-
-/***************End Header******************/
-/***************Main******************/
-/* line 4, ../../sass/partials/_main.scss */
-section {
-  margin: 1em auto;
-  width: 90%;
-  border-bottom: 1px solid #085a8f;
-  padding-bottom: 1.5em;
-}
-/* line 9, ../../sass/partials/_main.scss */
-section.job, section.school {
-  margin: 0 0 2em;
-  width: 100%;
-  border: none;
-  padding: 0;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-}
-@media (min-width: 730px) {
-  /* line 15, ../../sass/partials/_main.scss */
-  section.job div, section.school div {
-    -webkit-box-flex: 3;
-    -moz-box-flex: 3;
-    -webkit-flex: 3;
-    -ms-flex: 3;
-    flex: 3;
-    display: inline-block;
-    padding-right: 1em;
-  }
-}
-/* line 23, ../../sass/partials/_main.scss */
-section:last-child {
-  border-bottom: none;
-}
-/* line 26, ../../sass/partials/_main.scss */
-section h3 {
-  font-size: 1.15em;
-  color: #085a8f;
-  font-family: "p22-underground", sans-serif;
-}
-/* line 31, ../../sass/partials/_main.scss */
-section h4 {
-  color: #37d1bc;
-  font-family: "p22-underground", sans-serif;
-  text-transform: uppercase;
-}
-/* line 36, ../../sass/partials/_main.scss */
-section li {
-  margin: 1em;
-  font-size: 1.05em;
-}
-
-/* line 41, ../../sass/partials/_main.scss */
-aside {
-  display: none;
-}
-@media (min-width: 730px) {
-  /* line 41, ../../sass/partials/_main.scss */
-  aside {
-    display: inline-block;
-    float: right;
-    -webkit-box-flex: 1;
-    -moz-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-  }
-}
-
-/* line 49, ../../sass/partials/_main.scss */
-.dates div {
-  display: inline-block;
-  padding: 1em;
-  background: #737373;
-  color: #fff;
-  width: 135px;
-  text-align: center;
-}
-
-/***************End Main******************/
-@media (min-width: 981px) {
-  /* line 1, ../../sass/partials/_notes.scss */
-  .reading-wrapper {
-    width: 50%;
-  }
-}
-
-/* line 7, ../../sass/partials/_notes.scss */
-.notes {
-  margin-top: 2em;
-}
-/* line 9, ../../sass/partials/_notes.scss */
-.notes a {
-  margin-bottom: .5em;
-  display: inline-block;
-}
-/* line 13, ../../sass/partials/_notes.scss */
-.notes p {
-  margin-bottom: 2em;
-}
-
-/* line 18, ../../sass/partials/_notes.scss */
-.note {
-  margin-bottom: 2em;
-}
-/* line 20, ../../sass/partials/_notes.scss */
-.note:last-child {
-  margin-bottom: 0;
-}
-
-/* line 25, ../../sass/partials/_notes.scss */
-p.intro {
-  font-size: 1.15em;
-  color: #37d1bc;
-  font-family: "p22-underground", sans-serif;
-}
-
-/* line 31, ../../sass/partials/_notes.scss */
-h1.sectionTitle {
-  font-size: 2em;
-  color: #085a8f;
-  line-height: 1;
-}
-
-/***************Footer******************/
-/* line 3, ../../sass/partials/_footer.scss */
-footer {
-  border-bottom: none;
-}
-
-/* line 6, ../../sass/partials/_footer.scss */
-[class^="icon-"], [class*=" icon-"] {
-  font-family: 'icomoon';
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  color: #0c88d7;
-  font-size: 1.5em;
-  margin-right: 1em;
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  transition: .25s;
-}
-/* line 22, ../../sass/partials/_footer.scss */
-[class^="icon-"]:hover, [class*=" icon-"]:hover {
-  color: #085a8f;
-}
-
-/* line 27, ../../sass/partials/_footer.scss */
-.icon-mail:before {
-  content: "\ea83";
-}
-
-/* line 31, ../../sass/partials/_footer.scss */
-.icon-twitter2:before {
-  content: "\ea92";
-}
-
-/* line 35, ../../sass/partials/_footer.scss */
-.icon-github:before {
-  content: "\eab1";
-}
-
-/* line 39, ../../sass/partials/_footer.scss */
-.icon-linkedin:before {
-  content: "\eac8";
-}
-
-/* line 43, ../../sass/partials/_footer.scss */
-.contact {
-  margin-top: 1em;
-}
-
-/***************End Footer******************/
-
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}@font-face{font-family:'icomoon';src:url("fonts/icomoon.eot?-ahaht");src:url("fonts/icomoon.eot?#iefix-ahaht") format("embedded-opentype"),url("fonts/icomoon.woff?-ahaht") format("woff"),url("fonts/icomoon.ttf?-ahaht") format("truetype"),url("fonts/icomoon.svg?-ahaht#icomoon") format("svg");font-weight:normal;font-style:normal}*{box-sizing:border-box}body{font-family:"museo",serif;font-weight:300;color:#737373;line-height:1.3;-webkit-text-size-adjust:100%;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;-moz-osx-font-smoothing:grayscale;-moz-font-feature-settings:"liga" on}a:link,a:visited,a:active{color:#0c88d7;text-decoration:none;-webkit-transition:all .2s;transition:all .2s}a:hover{color:#085a8f}h1{font-size:1.5em;line-height:3;font-family:"p22-underground",sans-serif;vertical-align:top;text-align:center;display:inline}@media (min-width: 730px){h1{text-align:left}}h2{color:#0c88d7;font-family:"p22-underground",sans-serif;margin-bottom:.5em;font-size:1.5em;text-align:center;text-shadow:0 1px 1px rgba(0,0,0,0.25)}@media (min-width: 730px){h2{text-align:left}}code{font-family:monospace;background:#ddd;padding:1em;border-radius:3px;display:inline-block;margin-bottom:2em;white-space:pre;max-width:100%;overflow:auto}code .highlight{color:#0c88d7}strong{font-weight:700}em{font-style:italic}.top{width:100%;background:#0c88d7;color:#fff;text-align:center;box-shadow:0 -3px 10px rgba(0,0,0,0.2) inset;text-shadow:0 2px 1px rgba(0,0,0,0.25)}@media (min-width: 730px){.top{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;text-align:left;align-items:center}}.top a{color:#fff;display:inline-block;padding:1em 1em .5em 1em;transition:.25s;max-width:100%}.top a:hover{color:#eee}.top .selected{color:#fff;cursor:default;border-bottom:2px solid #fff}.top ul{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;width:100%}.top ul li{-webkit-box-flex:1;-moz-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;margin-bottom:1em}@media (min-width: 730px){.name{-webkit-box-flex:1;-moz-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;margin-left:4em}}header img{border-radius:50%;max-width:50px;margin:10px}@media (min-width: 730px){nav{-webkit-box-flex:1;-moz-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1}}.links{margin:1em}.links ul{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;width:100%}.links ul li{display:inline;-webkit-box-flex:1;-moz-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;text-align:center;border:1px solid #0c88d7;border-right:none}@media (min-width: 730px){.links ul li{width:25%}}.links ul li a{text-decoration:none;color:#085a8f;padding:.25em;display:inline-block;width:100%;-webkit-transition:all .2s;transition:all .2s;font-family:"p22-underground",sans-serif;font-size:.9em}.links ul li a:hover{color:#fff;background:#37d1bc}.links ul li:first-child{border-radius:2px 0 0 2px}.links ul li:last-child{border-radius:0 2px 2px 0;border-right:1px solid #0c88d7}section{margin:1em auto;width:90%;border-bottom:1px solid #085a8f;padding-bottom:1.5em}section.job,section.school{margin:0 0 2em;width:100%;border:none;padding:0;display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex}@media (min-width: 730px){section.job div,section.school div{-webkit-box-flex:3;-moz-box-flex:3;-webkit-flex:3;-ms-flex:3;flex:3;display:inline-block;padding-right:1em}}section:last-child{border-bottom:none}section h3{font-size:1.15em;color:#085a8f;font-family:"p22-underground",sans-serif}section h4{color:#37d1bc;font-family:"p22-underground",sans-serif;text-transform:uppercase}section li{margin:1em;font-size:1.05em}aside{display:none}@media (min-width: 730px){aside{display:inline-block;float:right;-webkit-box-flex:1;-moz-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1}}.dates div{display:inline-block;padding:1em;background:#737373;color:#fff;width:135px;text-align:center}@media (min-width: 590px){.reading-wrapper{width:75%}}@media (min-width: 730px){.reading-wrapper{width:65%;font-size:1.15em;line-height:1.4}}@media (min-width: 981px){.reading-wrapper{width:50%;font-size:1.2em;letter-spacing:.01rem;line-height:1.5}}.notes{margin-top:2em}.notes p{margin-bottom:2em;line-height:1.5}.notes h2{text-align:left}.note{margin-bottom:2em}.note:last-child{margin-bottom:0}p.intro{font-size:1.15em;color:#37d1bc;font-family:"p22-underground",sans-serif;line-height:1.3}h1.sectionTitle{font-size:2em;color:#085a8f;line-height:1}.project{position:relative;width:350px}.preview{border:1px solid #ccc;border-radius:5px}.title{font-family:"p22-underground",sans-serif;font-weight:900}.description{position:absolute;top:0;padding:1em;opacity:1;height:100%;width:100%;background:rgba(255,255,255,0.9)}.centered{top:25%;position:relative}footer{border-bottom:none}[class^="icon-"],[class*=" icon-"]{font-family:'icomoon';speak:none;font-style:normal;font-weight:normal;font-variant:normal;text-transform:none;line-height:1;color:#0c88d7;font-size:1.5em;margin-right:1em;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;transition:.25s}[class^="icon-"]:hover,[class*=" icon-"]:hover{color:#085a8f}.icon-mail:before{content:"\ea83"}.icon-twitter2:before{content:"\ea92"}.icon-github:before{content:"\eab1"}.icon-linkedin:before{content:"\eac8"}.contact{margin-top:1em}
 /*# sourceMappingURL=styles.css.map */
