--- a/sass/partials/_notes.scss
+++ b/sass/partials/_notes.scss
@@ -1,17 +1,28 @@
 .reading-wrapper {
+	@include breakpoint($sub-tablet) {
+		width: 75%;
+	}
+	@include breakpoint($tablet) {
+		width: 65%;
+		font-size: 1.15em;
+		line-height: 1.4;
+	}
 	@include breakpoint($desktop) {
 		width: 50%;
+		font-size: 1.2em;
+		letter-spacing: .01rem;
+		line-height: 1.5;
 	}
 }
 
 .notes {
 	margin-top: 2em;
-	a {
-		margin-bottom: .5em;
-		display: inline-block;
-	}
 	p {
 		margin-bottom: 2em;
+		line-height: 1.5;
+	}
+	h2 {
+		text-align: left;
 	}
 }
 
@@ -26,6 +37,7 @@ p.intro {
 	font-size: 1.15em;
 	color: $secondary;
 	font-family: $font-sans;
+	line-height: 1.3;
 }
 
 h1.sectionTitle {
