--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -6,7 +6,7 @@
 	color: #fff;
 	text-align: center;
 	box-shadow: 0 -3px 10px rgba(0,0,0,.2) inset;
-  @include breakpoint($tablet) {
+  @include breakpoint(tablet) {
     @include flexbox;
     text-align: left;
     align-items: center;
@@ -36,7 +36,7 @@
   }
 }
 .name {
-  @include breakpoint($tablet) {
+  @include breakpoint(tablet) {
     @include flex(1);
     margin-left: 4em;
   }
@@ -47,7 +47,7 @@ header img {
 	margin: 10px;
 }
 nav {
-  @include breakpoint($tablet) {
+  @include breakpoint(tablet) {
     @include flex(1);
   }
 }
@@ -62,7 +62,7 @@ nav {
 			text-align: center;
 			border: 1px solid $primary;
 			border-right: none;
-			@include breakpoint($tablet) {
+			@include breakpoint(tablet) {
 				width: 25%;
 			}
 			a {
