--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -13,7 +13,7 @@ section {
     padding: 0;
     @include flexbox;
     div {
-      @include breakpoint($tablet) {
+      @include breakpoint(tablet) {
         @include flex(3);
         display: inline-block;
         padding-right: 1em;
@@ -40,7 +40,7 @@ section {
 }
 aside {
   display: none;
-  @include breakpoint($tablet) {
+  @include breakpoint(tablet) {
     display: inline-block;
     float: right;
     @include flex(1);
