updated name in header not to use h1 tag on child pages

--- a/sass/partials/_global.scss
+++ b/sass/partials/_global.scss
@@ -32,7 +32,7 @@ a:link, a:visited, a:active {
 a:hover {
   color: $primary-dark;
 }
-h1 {
+h1, .fullname {
   font-size: 1.5em;
   line-height: 3;
   font-family: $font-sans;
