--- a/sass/partials/_global.scss
+++ b/sass/partials/_global.scss
@@ -9,6 +9,7 @@
     url('fonts/icomoon.svg?-ahaht#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 * {
   box-sizing: border-box;
