updates to icons, js loading, colors, and top nav drawer show and hide

--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -2,42 +2,34 @@
 
 footer {
   border-bottom: none;
-}
-[class^="icon-"], [class*=" icon-"] {
-  font-family: 'icomoon';
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  color: $primary;
-  font-size: 1.5em;
-  margin-right: 1em;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  transition: .25s;
-  &:hover {
-    color: $primary-dark;
+  text-align: center;
+  @include breakpoint(tablet) {
+    text-align: left;
   }
-}
+  i {
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    color: $primary;
+    font-size: 1.5em;
 
-.icon-mail:before {
-  content: "\ea83";
-}
-
-.icon-twitter2:before {
-  content: "\ea92";
-}
-
-.icon-github:before {
-  content: "\eab1";
-}
-
-.icon-linkedin:before {
-  content: "\eac8";
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    transition: .25s;
+    &:hover {
+      color: $primary-dark;
+    }
+  }
+  a {
+    margin-right: 1em;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
 
 .contact {
