--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,6 +4,9 @@
 //reset
 @import 'partials/_reset.scss';
 
+//icon font
+@import 'partials/_icofont.scss';
+
 //page partials
 @import 'partials/_global.scss';
 @import 'partials/_header.scss';
