--- a/sass/partials/_global.scss
+++ b/sass/partials/_global.scss
@@ -1,16 +1,5 @@
 /***************Global******************/
 
-@font-face {
-  font-family: 'icomoon';
-  src:url('fonts/icomoon.eot?-ahaht');
-  src:url('fonts/icomoon.eot?#iefix-ahaht') format('embedded-opentype'),
-    url('fonts/icomoon.woff?-ahaht') format('woff'),
-    url('fonts/icomoon.ttf?-ahaht') format('truetype'),
-    url('fonts/icomoon.svg?-ahaht#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
 * {
   box-sizing: border-box;
 }
@@ -27,8 +16,7 @@ body  {
 a:link, a:visited, a:active {
   color: $primary;
   text-decoration: none;
-  -webkit-transition: all .2s; /* For Safari 3.1 to 6.0 */
-    transition: all .2s;
+  transition: all .2s;
 }
 a:hover {
   color: $primary-dark;
@@ -56,7 +44,7 @@ h2 {
 }
 code {
   font-family: monospace;
-  background: #ddd;
+  background: #eee;
   padding: 1em;
   border-radius: 3px;
   display: inline-block;
@@ -64,6 +52,7 @@ code {
   white-space: pre;
   max-width: 100%;
   overflow: auto;
+  color: $dark-gray;
   .highlight {
     color: $primary;
   }
