--- a/sass/partials/_icofont.scss
+++ b/sass/partials/_icofont.scss
@@ -12,6 +12,7 @@
   font-family: "IcoFont";
 font-weight: normal;
 font-style: "Regular";
+font-display: swap;
 src: url("./fonts/icofont.woff2") format("woff2"),
 url("./fonts/icofont.woff") format("woff");
 }
