fixed reading wrapper class adding unnecessary space btwn footer and main

--- a/sass/partials/_notes.scss
+++ b/sass/partials/_notes.scss
@@ -1,3 +1,9 @@
+.rw-mt {
+  @include breakpoint(tablet) {
+    margin-top: 120px;
+  }
+}
+
 .reading-wrapper {
 	@include breakpoint(sub-tablet) {
 		width: 75%;
@@ -6,7 +12,6 @@
 		width: 65%;
 		font-size: 1.15em;
 		line-height: 1.4;
-		margin-top: 120px;
 	}
 	@include breakpoint(desktop) {
 		width: 50%;
