fixed top nav and code styling

--- a/sass/partials/_global.scss
+++ b/sass/partials/_global.scss
@@ -50,7 +50,7 @@ code {
   display: inline-block;
   margin-bottom: 2em;
   white-space: pre;
-  max-width: 100%;
+  width: 100%;
   overflow: auto;
   color: $dark-gray;
   .highlight {
