--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -5,7 +5,7 @@
 	background: $primary;
 	color: #fff;
 	text-align: center;
-	box-shadow: 0 -3px 10px rgba(0,0,0,.2) inset;
+	box-shadow: 0 0 10px rgba(0,0,0,.6);
   transition: all .2s;
   position: fixed;
   top: 0;
